After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 722891 - multiqueue: Growing of multiqueue does not work correctly if all except one pad are not linked
multiqueue: Growing of multiqueue does not work correctly if all except one p...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal normal
: 1.3.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-01-24 06:58 UTC by Per Johansson
Modified: 2014-01-24 08:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch for the described problem. (2.98 KB, patch)
2014-01-24 06:58 UTC, Per Johansson
committed Details | Review

Description Per Johansson 2014-01-24 06:58:59 UTC
Created attachment 267105 [details] [review]
Patch for the described problem.

In the case where one singlequeue is full and all other are not linked, the growing of the full queue does not work correctly. The result depends on if the full queue is last in the queue list or not.
The problem was introduced in commit c343ebd454e0e5846f6d5b3a22ed0dd3ffdd98e8.
Comment 1 Sebastian Dröge (slomo) 2014-01-24 08:29:01 UTC
commit 454ee04a2271dbbc272ea47a0947ceb5a4d8d38f
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Fri Jan 24 09:28:05 2014 +0100

    multiqueue: Break the loop immediately if we found an empty queue
    
    No need to continue looking at all the others

commit 4f928547a8f13b5755f19caaf4fe55d8dd1c9b94
Author: Per x Johansson <perxjoh@axis.com>
Date:   Thu Jan 23 15:47:23 2014 +0100

    multiqueue: Allow growing a queue if all other queues are not linked
    
    In the case where one singlequeue is full and all other are not linked, the
    growing of the full queue does not work correctly. The result depends on if
    the full queue is last in the queue list or not.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=722891